fixes a bug in core.js

--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -1,6 +1,6 @@
 <div class="loginContainer">
 	<form class="form-signin">
-        <h2 class="form-signin-heading">Sign in to Cybage UI - IMS</h2>
+        <h2 class="form-signin-heading">Sign in to Cybage UI - Greetings</h2>
         <input class="input-block-level" id="email" name="email" type="text" placeholder="Email Address">
         <input class="input-block-level" type="password" id="password" name="password" placeholder="Password">
         <div class="alert-container"></div>
