--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -1,13 +1,32 @@
 <div class="loginContainer">
-	<form class="form-signin">
-        <h2 class="form-signin-heading">Sign in to Cybage UI - Greetings</h2>
-        <input class="input-block-level" id="email" name="email" type="text" placeholder="Email Address">
-        <input class="input-block-level" type="password" id="password" name="password" placeholder="Password">
-        <div class="alert-container"></div>
-        <button type="submit" class="btn btn-primary"><i class="icon-off icon-white"></i> Sign In</button>
-        <div class="btn-group pull-right">
-			<button type="button" class="btn"><i class="icon-exclamation-sign"></i> Forgot Password?</button>
-			<button type="button" class="btn"><i class="icon-question-sign"></i> Help</button>
-		</div>
+    <form class="form-signin form-horizontal">
+        <fieldset>
+            <legend class="form-signin-heading">Sign in to Cybage UI - Greetings</legend>
+            <div class="control-group row">
+                <label class="control-label" for="inputEmail">Email</label>
+                <div class="controls">
+                    <div class="input-append">
+                        <input class="span2 input-xlarge" id="email" name="email" type="text" placeholder="Email Address">
+                        <span class="add-on">@cybage.com</span>
+                    </div>
+                    <span class="help-inline"></span>
+                </div>
+            </div>
+            <div class="control-group row">
+                <label class="control-label" for="password">Password</label>
+                <div class="controls">
+                    <input class="input-xlarge" type="password" id="password" name="password" placeholder="Password">
+                    <span class="help-inline"></span>
+                </div>
+            </div>
+            <div class="alert-container"></div>
+            <div class="actions">
+                <button type="submit" class="btn btn-primary"><i class="icon-off icon-white"></i> Sign In</button>
+                <div class="btn-group pull-right">
+                    <button type="button" class="btn"><i class="icon-exclamation-sign"></i> Forgot Password?</button>
+                    <button type="button" class="btn"><i class="icon-question-sign"></i> Help</button>
+                </div>
+            </div>
+        </fieldset>
     </form>
 </div>
