updates dashboard partially.

--- a/src/templates/header/menu.html
+++ b/src/templates/header/menu.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse nav navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a class="brand" href="#">Cybage UI - Interview Management System</a>
+            <a class="brand" href="#">Cybage UI - Greetings</a>
             <div class="nav-collapse collapse">
               <!-- <ul class="nav">
                     <li class="divider-vertical"></li>
