--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -1,40 +1,52 @@
-<div class="masthead">
-    <ul class="nav nav-pills pull-right">
-        <li class="active"><a href="#"><i class="icon-list icon-white"></i> Interview List</a></li>
-        <li><a href="#interview"><i class="icon-file"></i> Add new interview</a></li>
+<div class="row-fluid">
+    <ul class="thumbnails">
+        <li class="span4">
+            <div class="thumbnail">
+                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px; height: 200px; margin-top: 10px;" src="./imgs/users.jpg">
+                <div class="caption">
+                    <h3>
+                        Users
+                    </h3>
+                    <p>
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                    </p>
+                    <p style="text-align: center;">
+                        <a href="#user" class="btn btn-primary btn-large">Enter</a>
+                    </p>
+                </div>
+            </div>
+        </li>
+        <li class="span4">
+            <div class="thumbnail">
+                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px; height: 200px; margin-top: 10px;" src="./imgs/survey.jpg">
+                <div class="caption">
+                    <h3>
+                        Greetings
+                    </h3>
+                    <p>
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                    </p>
+                    <p style="text-align: center;">
+                        <a href="#listSurvey" class="btn btn-primary btn-large">Enter</a>
+                    </p>
+                </div>
+            </div>
+        </li>
+        <li class="span4">
+            <div class="thumbnail">
+                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px; height: 200px; margin-top: 10px;" src="./imgs/userAssesment.jpg">
+                <div class="caption">
+                    <h3>
+                        Reports
+                    </h3>
+                    <p>
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                    </p>
+                    <p style="text-align: center;">
+                        <a href="#userAssesment" class="btn btn-primary btn-large">Enter</a>
+                    </p>
+                </div>
+            </div>
+        </li>
     </ul>
-    <h3 class="muted">List of interview's taken</h3>
 </div>
-
-<table class="table table-bordered table-hover">
-    <thead>
-        <tr style="background-color:#BDBDBD;">
-            <th style="text-align:center">Candiate Name</th>
-            <th style="text-align:center">Interview 1</th>
-            <th style="text-align:center">Interview 2</th>
-            <th style="text-align:center">Recruiter</th>
-            <th style="text-align:center">Status</th>
-            <th style="text-align:center">Round</th>
-            <th style="text-align:center">Mode</th>
-            <th style="text-align:center">Remarks</th>
-            <th style="text-align:center">Operation</th>
-        </tr>
-    </thead>
-    <tbody>
-        {{#each interviewList}}
-            <tr data-id={{id}}>
-                <td>{{candiateName}}</td>
-                <td>{{getInterviewer interviewer_1_id}}</td>
-                <td>{{getInterviewer interviewer_2_id}}</td>
-                <td>{{getRecruiter recruiter_id}}</td>
-                <td style="text-align:center">{{getStatus status_id}}</td>
-                <td style="text-align:center">{{getRound round_id}}</td>
-                <td style="text-align:center">{{getMode mode_id}}</td>
-                <td>{{description}}</td>
-                <td style="text-align:center">
-                    <button type="button" class="btn btn-small btn-primary edit" href="#"><i class="icon-edit icon-white"></i> Edit</button> <button type="button" class="btn btn-small btn-danger delete" href="#"><i class="icon-trash icon-white"></i> Delete</button>
-                </td>
-            </tr>
-        {{/each}}
-    </tbody>
-</table>
