--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -11,7 +11,7 @@
                         Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                     </p>
                     <p style="text-align: center;">
-                        <a href="#user" class="btn btn-primary btn-large">Enter</a>
+                        <a href="#users" class="btn btn-primary btn-large">Enter</a>
                     </p>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                         Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                     </p>
                     <p style="text-align: center;">
-                        <a href="#listSurvey" class="btn btn-primary btn-large">Enter</a>
+                        <a href="#greetings" class="btn btn-primary btn-large">Enter</a>
                     </p>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                         Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
                     </p>
                     <p style="text-align: center;">
-                        <a href="#userAssesment" class="btn btn-primary btn-large">Enter</a>
+                        <a href="#reports" class="btn btn-primary btn-large">Enter</a>
                     </p>
                 </div>
             </div>
