--- a/src/templates/user/userList.html
+++ b/src/templates/user/userList.html
@@ -50,7 +50,7 @@
                             <button type="button" class="btn grid-prevpage"><i class="icon-chevron-left"></i></button>
                             <span>Page</span>
 
-                            <div class="input-append dropup combobox">
+                            <div class="input-append combobox">
                                 <input class="span1" type="text">
                                 <button type="button" class="btn" data-toggle="dropdown"><i class="caret"></i></button>
                                 <ul class="dropdown-menu"></ul>
