Handling undefined call.
Signed-off-by: JerinJ <jerinj@cybage.com>

--- a/src/templates/user/userCreateEdit.html
+++ b/src/templates/user/userCreateEdit.html
@@ -56,6 +56,6 @@
     </form>
 </div>
 <div class="modal-footer">
-    <a href="#" class="btn btn-success update" data-dismiss="modal"><i class="icon-ok-sign icon-white"></i> Update</a>
+    <a href="#" class="btn btn-success update"><i class="icon-ok-sign icon-white"></i> Update</a>
     <a href="#" class="btn" data-dismiss="modal"><i class="icon-remove-sign"></i> Cancel</a>
 </div>
