--- a/src/templates/user/userDelete.html
+++ b/src/templates/user/userDelete.html
@@ -6,10 +6,7 @@
     <div class="modal-body">
         <div class="control-group">
             <div class="controls">
-                <label class="lead text-error">Are you absolutely sure you want to delete this survey?</label>
-                <label class="checkbox">
-                    <input type="checkbox"> I understand the consequences, delete this survey. This will delete the survey &amp; relavent details permanently.
-                </label>
+                <label class="lead text-error">Are you absolutely sure you want to delete this user?</label>
             </div>
         </div>
     </div>
