--- a/src/templates/user/userCreateEdit.html
+++ b/src/templates/user/userCreateEdit.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	<h3 class="lead">Update</h3>
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3 class="lead">{{button}}</h3>
 </div>
 <div class="modal-body">
     <div class="alert-container"></div>
     <form class="form-horizontal" id="userForm">
-        <!-- Employee Id -->
+		<!-- Employee Id -->
         <div class="control-group">
             <label class="control-label" for="empid">Employee Id</label>
             <div class="controls">
@@ -36,7 +36,7 @@
         <div class="control-group">
             <label class="control-label" for="email">Email id</label>
             <div class="controls">
-                <input type="text" id="email" name="email" class="input-xlarge" placeholder="eg. abc@test.com" />
+                <input type="text" id="email" name="email" class="input-xlarge" placeholder="eg. Xyz" />
                 <span class="help-inline"></span>
             </div>
         </div>
@@ -53,9 +53,20 @@
                 </label>
             </div>
         </div>
+
+        <!-- Password -->
+        {{#if button}}
+            <div class="control-group">
+                <label class="control-label" for="password">password</label>
+                <div class="controls">
+                    <input type="password" id="password" name="password" class="input-xlarge" placeholder="eg. Xyz" />
+                    <span class="help-inline"></span>
+                </div>
+            </div>
+        {{/if}}
     </form>
 </div>
 <div class="modal-footer">
-    <a href="#" class="btn btn-success update"><i class="icon-ok-sign icon-white"></i> Update</a>
+    <a href="#" class="btn btn-success createEditUser"><i class="icon-ok-sign icon-white"></i>{{button}}</a>
     <a href="#" class="btn" data-dismiss="modal"><i class="icon-remove-sign"></i> Cancel</a>
 </div>
