--- a/src/templates/user/userSummary.html
+++ b/src/templates/user/userSummary.html
@@ -1,34 +1,36 @@
-<div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3 class="lead">Users summary</h3>
-</div>
-<div class="modal-body summaryModal">
-	<table class="table table-bordered">
-		<thead>
-			<tr>
-				<th>Fields</th>
-				<th colspan="2">Summary</th>
-				<th>Total</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<th rowspan="2">Type of Users</th>
-				<td colspan="2">Admin users</td>
-				<td><span class="badge badge-inverse" id="admin">10</span></td>
-			</tr>
-			<tr>
-				<td colspan="2">Normal users</td>
-				<td><span class="badge badge-inverse" id="normal">10</span></td>
-			</tr>
-			<tr>
-				<th colspan="3">Total users</th>
-				<td><span class="badge badge-inverse" id="totalUsers">10</span></td>
-			</tr>
-		</tbody>
-	</table>
-</div>
-<div class="modal-footer">
-	<a href="javascript:window.print()" class="btn" ><i class="icon-print"></i> Print</a>
-    <a href="#" class="btn" data-dismiss="modal"><i class="icon-thumbs-down"></i> Close</a>
+<div class="modal hide fade">
+	<div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	    <h3 class="lead">Users summary</h3>
+	</div>
+	<div class="modal-body summaryModal">
+		<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th>Fields</th>
+					<th colspan="2">Summary</th>
+					<th>Total</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th rowspan="2">Type of Users</th>
+					<td colspan="2">Admin users</td>
+					<td><span class="badge badge-inverse" id="admin">10</span></td>
+				</tr>
+				<tr>
+					<td colspan="2">Normal users</td>
+					<td><span class="badge badge-inverse" id="normal">10</span></td>
+				</tr>
+				<tr>
+					<th colspan="3">Total users</th>
+					<td><span class="badge badge-inverse" id="totalUsers">10</span></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<div class="modal-footer">
+		<a href="javascript:window.print()" class="btn" ><i class="icon-print"></i> Print</a>
+	    <a href="#" class="btn" data-dismiss="modal"><i class="icon-thumbs-down"></i> Close</a>
+	</div>
 </div>
