--- a/src/templates/user/userDelete.html
+++ b/src/templates/user/userDelete.html
@@ -4,6 +4,7 @@
         <h3 class="lead">Delete</h3>
     </div>
     <div class="modal-body">
+        <div class="alert-container"></div>
         <div class="control-group">
             <div class="controls">
                 <label class="lead text-error">Are you absolutely sure you want to delete this user?</label>
