Completes greetings section in admin.

--- a/src/templates/greetings/admin/greetingsAdmin.html
+++ b/src/templates/greetings/admin/greetingsAdmin.html
@@ -13,7 +13,7 @@
                         <div class="btn-group">
                             <button class="btn greetingCreate">Add Greeting</button>
                             <!-- <button class="btn sendEmail disabled">Send Email</button> -->
-                            <button class="btn btn-danger deleteGreeting disabled" disabled="true"> Delete</button>
+                            <button class="btn btn-danger greetingDelete disabled" disabled="true"> Delete</button>
                         </div>
                     </div>
                 </th>
@@ -65,3 +65,4 @@
     </table>
 </div>
 <div class="modal-container"></div>
+<div class="modal-containerConfirm"></div>
