--- a/src/templates/user/userCreateEdit.html
+++ b/src/templates/user/userCreateEdit.html
@@ -7,9 +7,9 @@
     <form class="form-horizontal" id="userForm">
 		<!-- Employee Id -->
         <div class="control-group">
-            <label class="control-label" for="empid">Employee Id</label>
+            <label class="control-label" for="id">Employee Id</label>
             <div class="controls">
-                <input type="text" id="empid" name="empid" class="input-xlarge" placeholder="eg. Abc" />
+                <input type="text" id="id" name="id" class="input-xlarge" placeholder="eg. Abc" />
                 <span class="help-inline"></span>
             </div>
         </div>
