--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -6,8 +6,7 @@
                 <label class="control-label" for="inputEmail">Email</label>
                 <div class="controls">
                     <div class="input-append">
-                        <input class="span2 input-xlarge" id="email" name="email" type="text" placeholder="Email Address">
-                        <span class="add-on">@cybage.com</span>
+                        <input class="input-xlarge" id="email" name="email" type="text" placeholder="abc@cybage.com">
                     </div>
                     <span class="help-inline"></span>
                 </div>
