Adds overall votes report.
Signed-off-by: Vinayak Patil <vinayakpat@cybage.com>

--- a/src/templates/reports/reportsView.html
+++ b/src/templates/reports/reportsView.html
@@ -1,11 +1,14 @@
 <div class="row">
     <div class="span12">
         <div class="panel panel-default">
+            <div class="pull-right">
+                <button class="btn usersNotVoted" data-dismiss="modal"><i class="icon-thumbs-down"></i> Users not voted</button>
+            </div>
             <div class="panel-heading">
                 <h6 class="panel-title lead">Designer Report</h6>
             </div>
             <div class="panel-body">
-                <div id="piechart"></div>
+                <div id="chart"></div>
             </div>
         </div>
     </div>
@@ -32,3 +35,4 @@
         </div>
     </div>
 </div>
+<div class="modal-container"></div>
