--- a/src/templates/header/menu.html
+++ b/src/templates/header/menu.html
@@ -1,13 +1,8 @@
 <div class="navbar navbar-inverse nav navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a class="brand" href="#">Cybage UI - Greetings</a>
+            <a class="brand" href="{{#if isAdmin}}#dashboard {{else}} #greetings{{/if}}">Cybage UI - Greetings</a>
             <div class="nav-collapse collapse">
-              <!-- <ul class="nav">
-                    <li class="divider-vertical"></li>
-                    <li class="active"><a href="#">Interview List</a></li>
-                    <li><a href="#interview">Add new interview</a></li>
-              </ul> -->
                 <div class="pull-right">
                     <ul class="nav pull-right">
                         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, {{email}} <b class="caret"></b></a>
