--- a/src/templates/user/userCreateEdit.html
+++ b/src/templates/user/userCreateEdit.html
@@ -55,7 +55,7 @@
         </div>
 
         <!-- Password -->
-        {{#if button}}
+        {{#if create}}
             <div class="control-group">
                 <label class="control-label" for="password">password</label>
                 <div class="controls">
