Adding print functionality.
Signed-off-by: JerinJ <jerinj@cybage.com>

--- a/src/templates/reports/reportsView.html
+++ b/src/templates/reports/reportsView.html
@@ -32,6 +32,9 @@
             <div class="panel-body">
                 <div id="chart"></div>
             </div>
+            <div class="pull-right">
+                <a href="javascript:window.print()" class="btn" ><i class="icon-print"></i> Print</a>
+            </div>
         </div>
     </div>
 </div>
