--- a/src/templates/reports/reportsView.html
+++ b/src/templates/reports/reportsView.html
@@ -2,6 +2,7 @@
     <div class="span12">
         <div class="panel panel-default">
             <div class="pull-right">
+                <a href="javascript:window.print()" class="btn" ><i class="icon-print"></i> Print</a> &nbsp;
                 <button class="btn usersNotVoted" data-dismiss="modal"><i class="icon-thumbs-down"></i> Users not voted</button>
             </div>
             <div class="panel-heading">
@@ -31,9 +32,6 @@
             </div>
             <div class="panel-body">
                 <div id="chart"></div>
-            </div>
-            <div class="pull-right">
-                <a href="javascript:window.print()" class="btn" ><i class="icon-print"></i> Print</a>
             </div>
         </div>
     </div>
