Refactoring the code
Signed-off-by: JerinJ <jerinj@cybage.com>

--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -8,7 +8,7 @@
                         Users
                     </h3>
                     <p>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                        User view section contains list of the users which can access this survey. You can create, update and delete the users as per the requirments.
                     </p>
                     <p style="text-align: center;">
                         <a href="#users" class="btn btn-primary btn-large">Enter</a>
@@ -18,13 +18,13 @@
         </li>
         <li class="span4">
             <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px; height: 200px; margin-top: 10px;" src="./imgs/survey.jpg">
+                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px; height: 200px; margin-top: 10px;" src="./imgs/greetings.png">
                 <div class="caption">
                     <h3>
                         Greetings
                     </h3>
                     <p>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                        Greeting section contains the list of all the greeting uploaded. You can create, read, update and delete the greetings.
                     </p>
                     <p style="text-align: center;">
                         <a href="#greetings" class="btn btn-primary btn-large">Enter</a>
@@ -40,7 +40,7 @@
                         Reports
                     </h3>
                     <p>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                        Report section genrates the report of all the greeting which has been uploaded on the basis of the votes given by the user.
                     </p>
                     <p style="text-align: center;">
                         <a href="#reports" class="btn btn-primary btn-large">Enter</a>
