--- a/src/templates/reports/reportsView.html
+++ b/src/templates/reports/reportsView.html
@@ -2,7 +2,7 @@
     <div class="span12">
         <div class="panel panel-default">
             <div class="pull-right">
-                <a href="#" class="btn" ><i class="icon-print"></i> Print</a> &nbsp;
+                <button class="btn printReport" ><i class="icon-print"></i> Print</button> &nbsp;
                 <button class="btn usersNotVoted" data-dismiss="modal"><i class="icon-thumbs-down"></i> Users not voted</button>
             </div>
             <div class="panel-heading">
