Handling alt attribute in greeting user view
Signed-off-by: JerinJ <jerinj@cybage.com>

--- a/src/templates/greetings/greetingsUser.html
+++ b/src/templates/greetings/greetingsUser.html
@@ -22,7 +22,7 @@
     <ul class="thumbnails" data-toggle="lightbox">
         {{#each greetings}}
             <li class="span3">
-                <a href="{{url}}" title="Image #1" class="thumbnail">
+                <a href="{{url}}" title="{{url}}" class="thumbnail">
                     <img src="{{url}}" alt="" class="greetingImage"/>
                 </a>
                 {{#unless ../response}}
