--- a/src/templates/reports/usersNotVoted.html
+++ b/src/templates/reports/usersNotVoted.html
@@ -64,5 +64,6 @@
     </div>
 </div>
 <div class="modal-footer">
+    <button class="btn printUserNotVoted" ><i class="icon-print"></i> Print</button>
     <button href="#" class="btn" data-dismiss="modal"><i class="icon-remove-sign"></i> Cancel</button>
 </div>
