--- a/src/templates/user/userCreateEdit.html
+++ b/src/templates/user/userCreateEdit.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3 class="lead">{{button}}</h3>
+    <h3 class="lead">{{button}} User</h3>
 </div>
 <div class="modal-body">
     <div class="alert-container"></div>
