modifies css structure.
Signed-off-by: Vinayak Patil <vinayakpat@cybage.com>

--- a/src/templates/reports/tooltip.html
+++ b/src/templates/reports/tooltip.html
@@ -1,4 +1,4 @@
 <div class="well well-small">
-    <img src="{{imgUrl}}" class="img-poloroid" alt="banner">
+    <img src="{{imgUrl}}" class="img-poloroid img-responsive" alt="banner">
     <h4>Total Votes: {{count}}</h4>
 </div>
