--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -1,52 +1,50 @@
-<div class="row-fluid">
-    <ul class="thumbnails list-unstyled">
-        <li class="col-md-4">
-            <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px; height: 200px; margin-top: 10px;" src="./imgs/users.jpg">
-                <div class="caption">
-                    <h3>
-                        Users
-                    </h3>
-                    <p>
-                        User view section contains list of the users which can access this survey. You can create, update and delete the users as per the requirments.
-                    </p>
-                    <p style="text-align: center;">
-                        <a href="#users" class="btn btn-primary btn-large">Enter</a>
-                    </p>
-                </div>
+<ul class="thumbnails list-unstyled col-md-12">
+    <li class="col-md-4 col-sm-4">
+        <div class="thumbnail">
+            <img src="./imgs/users.jpg" alt="Users">
+            <div class="caption">
+                <h3>
+                    Users
+                </h3>
+                <p>
+                    User view section contains list of the users which can access this survey. You can create, update and delete the users as per the requirments.
+                </p>
+                <p style="text-align: center;">
+                    <a href="#users" class="btn btn-primary btn-large">Enter</a>
+                </p>
             </div>
-        </li>
-        <li class="col-md-4">
-            <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px; height: 200px; margin-top: 10px;" src="./imgs/greetings.png">
-                <div class="caption">
-                    <h3>
-                        Greetings
-                    </h3>
-                    <p>
-                        Greeting section contains the list of all the greeting uploaded. You can create, read, update and delete the greetings.
-                    </p>
-                    <p style="text-align: center;">
-                        <a href="#greetings" class="btn btn-primary btn-large">Enter</a>
-                    </p>
-                </div>
+        </div>
+    </li>
+    <li class="col-md-4 col-sm-4">
+        <div class="thumbnail">
+            <img src="./imgs/greetings.png" alt="Greetings">
+            <div class="caption">
+                <h3>
+                    Greetings
+                </h3>
+                <p>
+                    Greeting section contains the list of all the greeting uploaded. You can create, read, update and delete the greetings.
+                </p>
+                <p style="text-align: center;">
+                    <a href="#greetings" class="btn btn-primary btn-large">Enter</a>
+                </p>
             </div>
-        </li>
-        <li class="col-md-4">
-            <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="300x200" style="width: 300px; height: 200px; margin-top: 10px;" src="./imgs/userAssesment.jpg">
-                <div class="caption">
-                    <h3>
-                        Reports
-                    </h3>
-                    <p>
-                        Report section genrates the report of all the greeting which has been uploaded on the basis of the votes given by the user.
-                    </p>
-                    <p style="text-align: center;">
-                        <a href="#reports" class="btn btn-primary btn-large">Enter</a>
-                    </p>
-                </div>
+        </div>
+    </li>
+    <li class="col-md-4 col-sm-4">
+        <div class="thumbnail">
+            <img src="./imgs/userAssesment.jpg" alt="Reports">
+            <div class="caption">
+                <h3>
+                    Reports
+                </h3>
+                <p>
+                    Report section genrates the report of all the greeting which has been uploaded on the basis of the votes given by the user.
+                </p>
+                <p style="text-align: center;">
+                    <a href="#reports" class="btn btn-primary btn-large">Enter</a>
+                </p>
             </div>
-        </li>
-    </ul>
-</div>
+        </div>
+    </li>
+</ul>
