--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,4 +1,4 @@
-<div class="main-menu-container"></div>
-<div class="alert-container"></div>
-<div class="page"><img src="imgs/loader.gif" alt="Loading"></div>
-<div class="footer "></div>
+<header class="main-menu-container row"></header>
+<div class="alert-container row"></div>
+<div class="page row"><img src="imgs/loader.gif" alt="Loading"></div>
+<footer class="footer "></footer>
