--- a/src/templates/reports/reportsView.html
+++ b/src/templates/reports/reportsView.html
@@ -1,38 +1,36 @@
-<div class="row">
-    <div class="span12">
-        <div class="panel panel-default">
-            <div class="pull-right">
-                <button class="btn printReport" ><i class="icon-print"></i> Print</button> &nbsp;
-                <button class="btn usersNotVoted" data-dismiss="modal"><i class="icon-thumbs-down"></i> Users not voted</button>
-            </div>
-            <div class="panel-heading">
-                <h6 class="panel-title lead">Designer Report</h6>
-            </div>
-            <div class="row">
-                <div class="span12">
-                    <div class="pull-right">
-                        Users:
-                        <select name="users" class="users">
-                            <option value="">All</option>
-                            {{#each users}}
-                            <option value="{{id}}">{{firstname}} {{lastname}}</option>
-                            {{/each}}
-                        </select>
-                    </div>
-                    <div>
-                        Designers:
-                        <select name="designers" class="designers">
-                            <option value="all">All</option>
-                            {{#each designers}}
-                            <option value="{{id}}">{{firstname}} {{lastname}}</option>
-                            {{/each}}
-                        </select>
-                    </div>
+<div class="col-md-12">
+    <div class="panel panel-default">
+        <div class="pull-right">
+            <button class="btn printReport" ><i class="icon-print"></i> Print</button> &nbsp;
+            <button class="btn usersNotVoted" data-dismiss="modal"><i class="icon-thumbs-down"></i> Users not voted</button>
+        </div>
+        <div class="panel-heading">
+            <h6 class="panel-title lead">Designer Report</h6>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="pull-right">
+                    Users:
+                    <select name="users" class="users">
+                        <option value="">All</option>
+                        {{#each users}}
+                        <option value="{{id}}">{{firstname}} {{lastname}}</option>
+                        {{/each}}
+                    </select>
+                </div>
+                <div>
+                    Designers:
+                    <select name="designers" class="designers">
+                        <option value="all">All</option>
+                        {{#each designers}}
+                        <option value="{{id}}">{{firstname}} {{lastname}}</option>
+                        {{/each}}
+                    </select>
                 </div>
             </div>
-            <div class="panel-body">
-                <div id="chart"></div>
-            </div>
+        </div>
+        <div class="panel-body">
+            <div id="chart"></div>
         </div>
     </div>
 </div>
