updates header as per new theme.

--- a/src/templates/footer/footer.html
+++ b/src/templates/footer/footer.html
@@ -1,3 +1,7 @@
-<footer>
-
-</footer>
+<div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">
+        <p>
+            Copyright &copy; Cybage 2013
+        </p>
+    </div>
+</div>
