--- a/src/templates/header/menu.html
+++ b/src/templates/header/menu.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -6,12 +6,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{#if isAdmin}}#dashboard {{else}} #greetings{{/if}}">Cybage UI - Greetings</a>
+            <a class="navbar-brand" href="{{#if isAdmin}}#dashboard {{else}} #greetings{{/if}}">Cybage UI</a>
         </div>
         <div class="navbar-collapse collapse">
             {{#if isAdmin}}
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#users">Users</a></li>
+                <ul class="nav navbar-nav mainNav">
+                    <li class="active"><a href="#dashboard">Dashboard</a></li>
+                    <li><a href="#users">Users</a></li>
                     <li><a href="#greetings">Greetings</a></li>
                     <li><a href="#reports">Reports</a></li>
                 </ul>
