--- a/src/templates/user/userDelete.html
+++ b/src/templates/user/userDelete.html
@@ -1,18 +1,22 @@
-<div class="modal hide fade">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3 class="lead">Delete</h3>
-    </div>
-    <div class="modal-body">
-        <div class="alert-container"></div>
-        <div class="control-group">
-            <div class="controls">
-                <label class="lead text-error">Are you absolutely sure you want to delete this user?</label>
+<div class="modal fade" role="dialog" aria-labelledby="userDeleteLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h3 class="modal-title" id="userDeleteLabel">Delete</h3>
             </div>
-        </div>
-    </div>
-    <div class="modal-footer">
-        <a href="#" class="btn btn-danger confirmDelete"><i class="icon-thumbs-up icon-white"></i> Yes</a>
-        <a href="#" class="btn" data-dismiss="modal"><i class="icon-thumbs-down"></i> No</a>
-    </div>
-</div>
+            <div class="modal-body">
+                <div class="alert-container"></div>
+                <div class="control-group">
+                    <div class="controls">
+                        <label class="lead text-error">Are you absolutely sure you want to delete this user?</label>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary confirmDelete"><i class="icon-thumbs-up icon-white"></i> Yes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="icon-thumbs-down"></i> No</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
