Adding Styling to modal
Signed-off-by: JerinJ <jerinj@cybage.com>

--- a/src/templates/header/menu.html
+++ b/src/templates/header/menu.html
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <img src="../../../../imgs/avator.jpg" alt="Avator" class="col-md-3">
-                    <a href="#reports" title="Edit Profile">{{email}}</a>
+                    <a href="#dashboard" title="Edit Profile">{{email}}</a>
                 </li>
 
                 <li>
