completes dashboard page styling and refactors less files

--- a/src/templates/dashboard/dashboard.html
+++ b/src/templates/dashboard/dashboard.html
@@ -1,50 +1,41 @@
 <ul class="thumbnails list-unstyled col-md-12">
     <li class="col-md-4 col-sm-4">
-        <div class="thumbnail">
-            <img src="./imgs/users.jpg" alt="Users">
-            <div class="caption">
-                <h3>
-                    Users
-                </h3>
-                <p>
-                    User view section contains list of the users which can access this survey. You can create, update and delete the users as per the requirments.
-                </p>
-                <p style="text-align: center;">
-                    <a href="#users" class="btn btn-primary btn-large">Enter</a>
-                </p>
-            </div>
+        <div class="box">
+            <h2>
+                <img src="./imgs/icon_greetings.png" alt="Greetings">
+                <span class="txt-greeting">Manage Greetings</span>
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, asperiores, beatae, alias vel vitae ullam nisi placeat eligendi ducimus suscipit earum blanditiis saepe necessitatibus eius ad. Adipisci quisquam doloremque repellendus!.
+            </p>
+            <a href="#greetings" class="btn btn-secondary btn-large pull-right">Go</a>
         </div>
     </li>
+
     <li class="col-md-4 col-sm-4">
-        <div class="thumbnail">
-            <img src="./imgs/greetings.png" alt="Greetings">
-            <div class="caption">
-                <h3>
-                    Greetings
-                </h3>
-                <p>
-                    Greeting section contains the list of all the greeting uploaded. You can create, read, update and delete the greetings.
-                </p>
-                <p style="text-align: center;">
-                    <a href="#greetings" class="btn btn-primary btn-large">Enter</a>
-                </p>
-            </div>
+        <div class="box">
+            <h2>
+                <img src="./imgs/icon_users.png" alt="Users">
+                <span class="txt-user">Manage Users</span>
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, asperiores, beatae, alias vel vitae ullam nisi placeat eligendi ducimus suscipit earum blanditiis saepe necessitatibus eius ad. Adipisci quisquam doloremque repellendus!.
+            </p>
+            <a href="#users" class="btn btn-secondary btn-large pull-right">Go</a>
         </div>
     </li>
+
     <li class="col-md-4 col-sm-4">
-        <div class="thumbnail">
-            <img src="./imgs/userAssesment.jpg" alt="Reports">
-            <div class="caption">
-                <h3>
-                    Reports
-                </h3>
-                <p>
-                    Report section genrates the report of all the greeting which has been uploaded on the basis of the votes given by the user.
-                </p>
-                <p style="text-align: center;">
-                    <a href="#reports" class="btn btn-primary btn-large">Enter</a>
-                </p>
-            </div>
+        <div class="box">
+            <h2>
+                <img src="./imgs/icon_report.png" alt="Reports">
+                <span class="txt-report">View Reports</span>
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, asperiores, beatae, alias vel vitae ullam nisi placeat eligendi ducimus suscipit earum blanditiis saepe necessitatibus eius ad. Adipisci quisquam doloremque repellendus!.
+            </p>
+            <a href="#reports" class="btn btn-secondary btn-large pull-right">View</a>
         </div>
     </li>
+
 </ul>
