Completes datagrid styling.

--- a/src/templates/user/userList.html
+++ b/src/templates/user/userList.html
@@ -10,15 +10,15 @@
                         </div>
                     </div>
                     <div class="pull-right">
-                        <button class="btn summary"><i class="icon-list-alt icon-white"></i> Summary</button>
+                        <button class="btn btn-secondary summary">Summary</button>
                     </div>
                 </th>
             </tr>
             <tr>
                 <th class="createDeleteheader">
                     <div class="pull-left">
-                            <button class="btn create">Add New User</button>
-                            <button class="btn btn-danger userDelete disabled" disabled="true">Delete</button>
+                            <button class="btn btn-primary create"><span class="glyphicon glyphicon-plus-sign"></span> Add New User</button>
+                            <button class="btn btn-default userDelete disabled" disabled="true">Delete</button>
                     </div>
                 </th>
             </tr>
