--- a/src/templates/greetings/admin/confirmModal.html
+++ b/src/templates/greetings/admin/confirmModal.html
@@ -1,18 +1,22 @@
-<div class="modal hide fade">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3 class="lead">Delete</h3>
-    </div>
-    <div class="modal-body">
-        <div class="alert-container"></div>
-        <div class="control-group">
-            <div class="controls">
-                <label class="lead text-error">Are you absolutely sure you want to delete this greeting?</label>
+<div class="modal fade"  aria-labelledby="deleteLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h3 class="txt-danger" id="deleteLabel">Delete</h3>
+            </div>
+            <div class="modal-body">
+                <div class="alert-container"></div>
+                <div class="control-group">
+                    <div class="controls">
+                        <label class="lead text-error"><span class="glyphicon glyphicon-question-sign txt-report"></span>&nbsp; Are you absolutely sure you want to delete this greeting?</label>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#" class="btn btn-primary confirmDelete"><i class="icon-thumbs-up icon-white"></i> Delete</a>
+                <a href="#" class="btn btn-default cancelDelete" data-dismiss="modal"><i class="icon-thumbs-down"></i> Cancel</a>
             </div>
         </div>
-    </div>
-    <div class="modal-footer">
-        <a href="#" class="btn btn-danger confirmDelete"><i class="icon-thumbs-up icon-white"></i> Yes</a>
-        <a href="#" class="btn" data-dismiss="modal"><i class="icon-thumbs-down"></i> No</a>
     </div>
 </div>
