--- a/src/templates/greetings/admin/greetingsAdmin.html
+++ b/src/templates/greetings/admin/greetingsAdmin.html
@@ -1,20 +1,21 @@
 <div class="fuelux">
-    <table id="MyGrid" class="table table-bordered datagrid">
+    <table id="MyGrid" class="table datagrid">
         <thead>
             <tr>
-                <th>
+                <th class="searchSummaryheader">
                     <div class="datagrid-header-left">
                         <div class="input-append search datagrid-search">
-                            <input type="text" class="input-medium" placeholder="Search Greetings">
+                            <input type="text" class="input-medium tableSearch" placeholder="Search">
                             <button type="button" class="btn"><i class="icon-search"></i></button>
                         </div>
                     </div>
-                    <div class="rows pull-right">
-                        <div class="btn-group">
-                            <button class="btn greetingCreate">Add Greeting</button>
-                            <!-- <button class="btn sendEmail disabled">Send Email</button> -->
-                            <button class="btn btn-danger greetingDelete disabled" disabled="true"> Delete</button>
-                        </div>
+                </th>
+            </tr>
+            <tr>
+                <th class="createDeleteheader">
+                    <div class="pull-left">
+                            <button class="btn btn-primary greetingCreate"><span class="glyphicon glyphicon-plus-sign"></span> Add New Greeting</button>
+                            <button class="btn btn-default greetingDelete  disabled" disabled="true">Delete</button>
                     </div>
                 </th>
             </tr>
