--- a/src/templates/user/userDelete.html
+++ b/src/templates/user/userDelete.html
@@ -3,19 +3,19 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h3 class="modal-title" id="userDeleteLabel">Delete</h3>
+                <h3 class="modal-title txt-danger" id="userDeleteLabel">Delete</h3>
             </div>
             <div class="modal-body">
                 <div class="alert-container"></div>
                 <div class="control-group">
                     <div class="controls">
-                        <label class="lead text-error">Are you absolutely sure you want to delete this user?</label>
+                        <label class="lead text-error"><span class="glyphicon glyphicon-question-sign txt-report"></span>&nbsp;Are you absolutely sure you want to delete this user?</label>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary confirmDelete"><i class="icon-thumbs-up icon-white"></i> Yes</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="icon-thumbs-down"></i> No</button>
+                <a href="#" class="btn btn-primary confirmDelete"><i class="icon-thumbs-up icon-white"></i> Delete</a>
+                <a href="#" class="btn btn-default cancelDelete" data-dismiss="modal"><i class="icon-thumbs-down"></i> Cancel</a>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
